--- a/Exercice5/index.html
+++ b/Exercice5/index.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
     <title>Exercice HTML - Navigation</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <!-- (Optionnel) défilement fluide -->
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Barre de navigation -->
+    <nav aria-label="Navigation principale">
+      <ul>
+        <li><a href="#accueil">Accueil</a></li>
+        <li><a href="#a-propos">À propos</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
 
-<section id="accueil">
-    <h1>Accueil</h1>
-    <p>Bienvenue sur notre site web!</p>
-</section>
+    <!-- Sections -->
+    <section id="accueil">
+      <h1>Accueil</h1>
+      <p>Bienvenue sur notre site web!</p>
+    </section>
 
-<section id="a-propos">
-    <h1>À propos</h1>
-    <p>Nous sommes une entreprise spécialisée dans...</p>
-</section>
+    <section id="a-propos">
+      <h1>À propos</h1>
+      <p>Nous sommes une entreprise spécialisée dans...</p>
+    </section>
 
-<section id="services">
-    <h1>Services</h1>
-    <p>Nos services incluent...</p>
-</section>
+    <section id="services">
+      <h1>Services</h1>
+      <p>Nos services incluent...</p>
+    </section>
 
-<section id="contact">
-    <h1>Contact</h1>
-    <p>Contactez-nous via...</p>
-</section>
-</body>
+    <section id="contact">
+      <h1>Contact</h1>
+      <p>Contactez-nous via...</p>
+    </section>
+  </body>
 </html>
